[package]
name = "tavern"
description = "ActivityPub, ActivityStream and Vocabulary library."
version = "0.0.2"
license = "ISC"
readme = "README.md"
repository = "https://github.com/jcmdln/tavern"
edition = "2021"
rust-version = "1.56"

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
serde_with = "2.2.0"
