[package]
name = "tavern_client"
description = "ActivityPub, ActivityStream and Vocabulary client."
version = "0.0.2"
license = "ISC"
readme = "README.md"
repository = "https://github.com/jcmdln/tavern"
edition = "2021"
rust-version = "1.56"

[dependencies]
#diesel = { version = "2.0.2", features = ["postgres", "serde_json", "uuid"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
serde_with = "2.2.0"
#tokio = { version = "1.24.1", features = ["full"] }

[dependencies.tavern]
version = "*"
path = "../tavern"
