[package]
name = "tavern_client"
description = "ActivityPub, ActivityStream and Vocabulary client."
version = "0.0.2"
license = "ISC"
readme = "README.md"
repository = "https://github.com/jcmdln/tavern"
edition = "2021"
rust-version = "1.56"

[dependencies]
tavern = { version = "0.0.2", path = "../tavern" }
