[package]
name = "tavern_server"
description = "ActivityPub, ActivityStream and Vocabulary server."
version = "0.0.2"
license = "ISC"
readme = "README.md"
repository = "https://github.com/jcmdln/tavern"
edition = "2021"
rust-version = "1.56"

[dependencies]
axum = "0.6.2"
diesel = { version = "2.0.2", features = ["postgres", "serde_json", "sqlite", "uuid"] }

[dependencies.tavern]
version = "*"
path = "../tavern"
