[package]
name = "tavern_server"
description = "ActivityPub, ActivityStream and Vocabulary server."
version = "0.0.2"
license = "ISC"
readme = "README.md"
repository = "https://github.com/jcmdln/tavern"
edition = "2021"
rust-version = "1.56"

[dependencies]
tavern = { version = "0.0.2", path = "../tavern" }

#axum = { version = "0.6.0", default-features = false }
#diesel = { version = "2.0.0", default-features = false, features = ["postgres", "sqlite"] }
