[package]
name = "tavern_server"
description = "ActivityPub, ActivityStream and Vocabulary server."
version = "0.0.2"
license = "ISC"
readme = "README.md"
repository = "https://github.com/jcmdln/tavern"
edition = "2021"
rust-version = "1.56"

[dependencies]
#tavern = { version = "0.0.2", path = "../tavern" }

axum = "0.6"
serde = { version = "1.0.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
